# Polls-App

./: README.md  README.rst  pyproject.toml  setup.cfg
BlogApp.egg-info/: PKG-INFO  SOURCES.txt
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py  0003_alter_question_pub_date.py  0004_alter_question_pub_date.py
polls/static/polls/: dtail.css  index.css  results.css
polls/templates/polls/: detail.html  index.html  results.html
