[metadata]
name =BlogApp
version = 1.0.0
description = A simple Django app to conduct web-based polls.
long_description = file: README.rst
url = https://www.ethans.co.in/
author = Ethans
author_email = sumaiyyajamadar2190@gmail.com
license = BSD-3-Clause # Example license
classifiers =
   Environment :: Web Environment
   Framework :: Django
   Framework :: Django :: 4.1
   Intended Audience :: Developers
   License :: OSI Approved :: BSD License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10
   Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.1